Add --enable-preview